前端文章列表5秒轮询实现更新；后端实现文章列表查询缓存；非BusinessError的全局异常处理不会将错误信息直接发至前端；大改bean管理；增加了Article领域事件